Avance 1.3 05/11/2025 solo falta implementar el video.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,7 +17,7 @@
             android:id="@+id/imgLogo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/uth_logo" /> <!-- Necesitarás añadir 'uth_logo.png' a tu carpeta res/drawable -->
+            android:src="@drawable/common_google_signin_btn_icon_light" /> <!-- Necesitarás añadir 'uth_logo.png' a tu carpeta res/drawable -->
 
         <VideoView
             android:id="@+id/videoView"
@@ -31,8 +31,8 @@
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="16dp"
-            android:src="@android:drawable/ic_media_play"
-            app:tint="@android:color/holo_red_dark" />
+            android:src="@drawable/rounded_accessibility_24"
+            app:tint="@android:color/holo_purple" />
 
         <Button
             android:id="@+id/btnTomarVideo"
@@ -70,33 +70,35 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
+            android:layout_marginTop="8dp">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtLatitud"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Latitud"
-                android:inputType="numberDecimalSigned"
-                android:focusable="false"/> <!-- No editable por el usuario -->
+                android:inputType="numberDecimal"
+                android:focusable="false"
+                android:clickable="false"
+                android:cursorVisible="false"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
-
+            android:layout_marginTop="8dp">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/txtLongitud"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Longitud"
-                android:inputType="numberDecimalSigned"
-                android:focusable="false"/> <!-- No editable por el usuario -->
+                android:inputType="numberDecimal"
+                android:focusable="false"
+                android:clickable="false"
+                android:cursorVisible="false"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
