--- a/app/src/main/res/layout/list_item_contact.xml
+++ b/app/src/main/res/layout/list_item_contact.xml
@@ -18,9 +18,9 @@
         <ImageView
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:src="@drawable/ic_contact_person"
-            app:tint="@color/design_default_color_primary"
-            android:layout_marginEnd="16dp"/>
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/rounded_accessibility_24"
+            app:tint="@color/design_default_color_secondary_variant" />
         <!-- Necesitarás un ícono 'ic_contact_person' en res/drawable -->
         <!-- Puedes usar el ícono de 'person' de los Vector Assets de Android Studio -->
 
