--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,21 +17,21 @@
             android:id="@+id/imgLogo"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:src="@drawable/common_google_signin_btn_icon_light" /> <!-- Necesitarás añadir 'uth_logo.png' a tu carpeta res/drawable -->
+            android:src="@drawable/common_google_signin_btn_icon_light_normal" />
 
         <VideoView
             android:id="@+id/videoView"
             android:layout_width="300dp"
             android:layout_height="200dp"
             android:layout_marginTop="16dp"
-            android:visibility="gone"/> <!-- Oculto hasta que se grabe un video -->
+            android:visibility="gone"/>
 
         <ImageView
             android:id="@+id/imgVideoPlaceholder"
             android:layout_width="180dp"
             android:layout_height="180dp"
             android:layout_marginTop="16dp"
-            android:src="@drawable/rounded_accessibility_24"
+            android:src="@drawable/outline_account_circle_24"
             app:tint="@android:color/holo_purple" />
 
         <Button
@@ -79,10 +79,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Latitud"
-                android:inputType="numberDecimal"
-                android:focusable="false"
-                android:clickable="false"
-                android:cursorVisible="false"/>
+                android:inputType="phone"
+                android:focusable="true"
+                android:clickable="true"
+                android:cursorVisible="true"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
@@ -95,10 +95,10 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Longitud"
-                android:inputType="numberDecimal"
-                android:focusable="false"
-                android:clickable="false"
-                android:cursorVisible="false"/>
+                android:inputType="phone"
+                android:focusable="true"
+                android:clickable="true"
+                android:cursorVisible="true"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
